Factor 0.76:
------------

+ Core language

- New words:

  math bitroll ( n s w -- n )
  unparser hex-string ( str -- str )
  sequences fourth ( seq -- elt )

- String input streams.

  with-string is now string-out ( quot -- string )

  new string-in ( string quot -- ) word, calls quot with stdio bound to
  a stream that reads from the given string.

- Improved inspector. Call it with inspect ( obj -- ).

+ Framework

- md5 hashing algorithm in contrib/crypto/ (Doug Coleman).

Factor 0.75:
------------

+ Runtime and core library

- Fix for a fatal bug where Factor was not functional on Mac OS X 10.4.

- Client sockets were not functional on Linux.

- New generational garbage collector. There are two command line
  switches for controlling it:

   +Yn   Size of 2 youngest generations, megabytes
   +An   Size of tenured and semi-spaces, megabytes

- Generic words can now dispatch on stack elements other than the top
  one; define your generic like this to dispatch on the second element:

   G: foo [ over ] [ type ] ;

  Or this for the third:

   G: foo [ pick ] [ type ] ;

  Note that GENERIC: foo is the same as

   G: foo [ dup ] [ type ] ;

- Sequence API refactoring, as described in
  http://www.jroller.com/page/slava/20050518.

- The SO_OOBINLINE socket flag is now set. In 0.74, sending out-of-band
  data could fill up the buffer and cause a denial-of-service attack.

- You can now set timeouts for I/O operations with the set-timeout
  generic word. The HTTP server sets a timeout of 60 seconds for client
  requests.

- Improved the words for doing binary I/O; see library/io/binary.factor
  and the section in the handbook on binary I/O.

+ Compiler

- The compiler now does constant folding for certain words with literal
  operands. The compiler's peephole optimizer has been improved.

- The alien interface now supports "float" and "double" types, and
  arrays of C types.

- New short-hand syntax for defining words that alien-invoke
  (Alex Chapman).
  