@@ -1,13 +1,14 @@
 #include "factor.h"
 
 void init_factor(char* image, CELL ds_size, CELL cs_size,
+	CELL generations,
 	CELL young_size, CELL aging_size,
 	CELL code_size, CELL literal_size)
 {
 	/* initialize random number generator */
 	srand((unsigned)time(NULL));
 	init_ffi();
-	init_arena(young_size,aging_size);
+	init_arena(generations,young_size,aging_size);
 	init_compiler(code_size);
 	load_image(image,literal_size);
 	init_stacks(ds_size,cs_size);
@@ -16,7 +17,7 @@ void init_factor(char* image, CELL ds_size, CELL cs_size,
 	init_errors();
 	userenv[CPU_ENV] = tag_object(from_c_string(FACTOR_CPU_STRING));
 	userenv[OS_ENV] = tag_object(from_c_string(FACTOR_OS_STRING));
-	userenv[GEN_ENV] = tag_fixnum(GC_GENERATIONS);
+	userenv[GEN_ENV] = tag_fixnum(gc_generations);
 	userenv[CARD_OFF_ENV] = tag_cell(cards_offset);
 }
 
@@ -36,6 +37,7 @@ int main(int argc, char** argv)
 {
 	CELL ds_size = 2048;
 	CELL cs_size = 2048;
+	CELL generations = 3;
 	CELL young_size = 8;
 	CELL aging_size = 16;
 	CELL code_size = 2;
@@ -49,8 +51,8 @@ int main(int argc, char** argv)
 		printf("Runtime options -- n is a number:\n");
 		printf(" +Dn   Data stack size, kilobytes\n");
 		printf(" +Cn   Call stack size, kilobytes\n");
-		printf(" +Yn   Size of %d youngest generations, megabytes\n",
-			GC_GENERATIONS-1);
+		printf(" +Gn   Number of generations, must be >= 2\n");
+		printf(" +Yn   Size of n-1 youngest generations, megabytes\n");
 		printf(" +An   Size of tenured and semi-spaces, megabytes\n");
 		printf(" +Xn   Code heap size, megabytes\n");
 		printf(" +Ln   Literal table size, kilobytes. Only for bootstrapping\n");
@@ -64,6 +66,7 @@ int main(int argc, char** argv)
 	{
 		if(factor_arg(argv[i],"+D%d",&ds_size)) continue;
 		if(factor_arg(argv[i],"+C%d",&cs_size)) continue;
+		if(factor_arg(argv[i],"+G%d",&generations)) continue;
 		if(factor_arg(argv[i],"+Y%d",&young_size)) continue;
 		if(factor_arg(argv[i],"+A%d",&aging_size)) continue;
 		if(factor_arg(argv[i],"+X%d",&code_size)) continue;
@@ -79,6 +82,7 @@ int main(int argc, char** argv)
 	init_factor(argv[1],
 		ds_size * 1024,
 		cs_size * 1024,
+		generations,
 		young_size * 1024 * 1024,
 		aging_size * 1024 * 1024,
 		code_size * 1024 * 1024,
